# finance-manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
alembic/: env.py
src/: config.py  exceptions.py
src/adapters/database/models/: balance.py  base_model.py  session.py  transaction.py  user.py
src/adapters/database/repository/: balance_reader_repository.py  user_reader_repository.py  user_writer_repository.py
src/adapters/entrypoints/api/: __main__.py  application.py  router.py
src/adapters/entrypoints/api/balance/: users_balance.py
src/adapters/entrypoints/api/cross_cutting/: middleware_context.py  middleware_jwt.py  middleware_logging.py
src/adapters/entrypoints/api/monitoring/: health.py
src/adapters/sso/: google.py
src/dto/: balance.py  user.py
src/dto/in/: user.py
src/dto/input/: transaction.py
src/dto/output/: balance.py  transaction.py  user.py
src/entities/: balance.py  base_entity.py  transaction.py  user.py
src/enums/: sso.py  transaction.py
src/ports/: balance_reader.py  base_router.py  sso.py  user_reader.py  user_writer.py
src/settings/: config.py
src/use_case/: callback.py  get_balance.py  login.py
test/: __init__.py  conftest.py
test/generators/: entities.py
test/integration/: conftest.py
test/integration/balance/: conftest.py  users_balance_test.py
test/integration/health/: conftest.py  health_test.py
test/integration/user/: callback_test.py  conftest.py
test/unit/: conftest.py
test/unit/use_case/: callback_test.py  conftest.py  get_balance_test.py  login_test.py
(+2 files in other folders)
